Fixed layout bugs in contact text and auto-fill property

--- a/styles/Kontakt.module.css
+++ b/styles/Kontakt.module.css
@@ -1,8 +1,6 @@
 .link{
     position: relative;
-    width: 100%;
     text-decoration: none;
-    margin: 1rem 0;
 }
 
 .iframe {
@@ -18,7 +16,7 @@
 
 .container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 1rem;
     position: relative;
     width: 100%;
